# ChangeLog for net-www/lighttpd
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/lighttpd/Attic/ChangeLog,v 1.1 2004/04/23 17:30:26 stuart Exp $

*lighttpd-1.1.8 (23 Apr 2004)

  23 Apr 2004; Stuart Herbert <stuart@gentoo.org> lighttpd-1.1.8.ebuild,
  files/lighttpd-1.1.8-gentoo.diff, files/lighttpd.initd:
  Initial import; thanks to Boris <sirro@nurfuerspam.de>; see bug #46833
