@@ -1,5 +1,5 @@
-MD5 48673477dd5402685933e62ad5218810 lighttpd-1.1.8.ebuild 1537
+MD5 cff8efff8c3e147b83e0eb3100409ad5 lighttpd-1.1.8.ebuild 1908
 MD5 b8f82e430650ab6e1882a45916a42b64 ChangeLog 450
 MD5 eb94c0fc2149e2543beb50e93058de99 files/digest-lighttpd-1.1.8 66
-MD5 1c07ea1036c540aa1db5fc0c9aa507c7 files/lighttpd-1.1.8-gentoo.diff 1303
+MD5 352e2fac9cb73bdae7672f977b044894 files/lighttpd-1.1.8-gentoo.diff 1301
 MD5 b23bbb2c34588e8946e5f7858f3fa2db files/lighttpd.initd 638
