@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd>webapps</herd>
+<maintainer>
+  <email>web-apps@gentoo.org</email>
+</maintainer>
+</pkgmetadata>
